--- a/XamarinTimeTracker/XamarinTimeTracker.csproj
+++ b/XamarinTimeTracker/XamarinTimeTracker.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -30,6 +30,9 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Converters\BoolToColorConverter0.cs" />
+    <Compile Include="Converters\DurationValueConverter0.cs" />
+    <Compile Include="Model\Segment.cs" />
     <Compile Include="XamarinTimeTracker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
@@ -62,10 +65,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="View\" />
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="View\StartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
