Attach ToggleProjectCommand to ItemTapped

--- a/XamarinTimeTracker/XamarinTimeTracker.csproj
+++ b/XamarinTimeTracker/XamarinTimeTracker.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Compile Include="Converters\BoolToColorConverter0.cs" />
     <Compile Include="Converters\DurationValueConverter0.cs" />
+    <Compile Include="Model\ProjectTimer.cs" />
+    <Compile Include="Model\ITimer.cs" />
     <Compile Include="Model\Segment.cs" />
     <Compile Include="XamarinTimeTracker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
